mi primera confirmación de actualización

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <p class="alertas" id="alertas"></p>
             </form>
         </section>
+        <div class="greeting"></div>
     </main>
 </body>
 
