--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                 <p class="alertas" id="alertas"></p>
             </form>
         </section>
-        <div class="greeting"></div>
+        <div class="greeting">
+            <h2>Prueba</h2>
+        </div>
     </main>
 </body>
 
